Blender crashes when using Gas Fluid Domain in Cycles #81893

Closed
opened 2020-10-20 17:22:57 +02:00 by pugonfireyt@gmail.com · 18 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38

Blender Version
Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0
Worked: blender-2.82a-windows64

Short description of error
For some reason, Blender crashes when I'm in Cycles and in Rendered view and I make an object a Fluid of type Domain. This only happens when Domain Type is set to Gas, not Liquid. It happens with both CPU and GPU Compute, so it's not a graphics driver problem.

A 40-second clip of what happens: https://youtu.be/r1rKpdPNBZo

Console output:
command-line.txt
(https://pastebin.com/4X0dMBQA)

system-info.txt:
system-info.txt
(https://pastebin.com/4mLWEu3h)

Someone else on r/blender mentioned that it happens to them too (https://www.reddit.com/r/blenderhelp/comments/jeb9hw/blender_crashes_when_using_gas_fluid_domain_in/g9enbo6). They apparently have tested it on both 2.83.7 and the latest 2.91.0 alpha on Linux.


Before the crash the debug log reports warnings and errors:

Texture state usage warning: The texture object (0) bound to texture image unit 0 does not have a defined base level and cannot be used for texture mapping.
Error: Program undefined behavior warning: The current GL state uses a sampler (0) that has depth comparisons disabled, with a texture object (0) with a non-depth format, by a shader that samples it with a shadow sampler. Using this state to sample would result in undefined behavior.
Stack trace:
blender.exe         :0x00007FF6ACF8A540  ccl::BVH::pack_primitives
blender.exe         :0x00007FF6ACF89C50  ccl::BVH::refit
blender.exe         :0x00007FF6A9ED92C0  ccl::Geometry::compute_bvh
blender.exe         :0x00007FF6A9EE2980  std::_Func_impl_no_alloc<std::_Binder<std::_Unforced,void (__cdecl ccl::Geometry::*)(ccl::Device * 
blender.exe         :0x00007FF6ABF7FE70  tbb::internal::function_task<std::function<void __cdecl(void)> >::execute
tbb.dll             :0x00007FFD911637A0  tbb::recursive_mutex::scoped_lock::internal_try_acquire
tbb.dll             :0x00007FFD911637A0  tbb::recursive_mutex::scoped_lock::internal_try_acquire
blender.exe         :0x00007FF6A8E91BA0  tbb::internal::task_group_base::wait
blender.exe         :0x00007FF6ABF7F070  ccl::TaskPool::wait_work
blender.exe         :0x00007FF6A9EDA570  ccl::GeometryManager::device_update
blender.exe         :0x00007FF6A9E58450  ccl::Scene::device_update
blender.exe         :0x00007FF6A9E5A100  ccl::Scene::update
blender.exe         :0x00007FF6A9E71170  ccl::Session::update_scene
blender.exe         :0x00007FF6A9E729E0  ccl::Session::run_cpu
blender.exe         :0x00007FF6A9E71340  ccl::Session::run
blender.exe         :0x00007FF6ABF82760  ccl::thread::run
blender.exe         :0x00007FF6A969D710  std::thread::_Invoke<std::tuple<void * __ptr64 (__cdecl*)(void * __ptr64),ccl::thread * __ptr64>,0,
ucrtbase.dll        :0x00007FFDCB261430  configthreadlocale
KERNEL32.DLL        :0x00007FFDCD6C6FC0  BaseThreadInitThunk
ntdll.dll           :0x00007FFDCD99CEA0  RtlUserThreadStart

Exact steps for others to reproduce the error

  1. Switch to the Rendered view
  2. Switch from Eevee to Cycles
  3. Click on the default cube
  4. Go to the Physics Properties tab
  5. Click on Fluid
  6. Change Type to Domain

blender.crash.txt

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38 **Blender Version** Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` Worked: blender-2.82a-windows64 **Short description of error** For some reason, Blender crashes when I'm in Cycles and in Rendered view and I make an object a Fluid of type Domain. This only happens when Domain Type is set to Gas, not Liquid. It happens with both CPU and GPU Compute, so it's not a graphics driver problem. A 40-second clip of what happens: https://youtu.be/r1rKpdPNBZo Console output: [command-line.txt](https://archive.blender.org/developer/F9023098/command-line.txt) (https://pastebin.com/4X0dMBQA) system-info.txt: [system-info.txt](https://archive.blender.org/developer/F9023103/system-info.txt) (https://pastebin.com/4mLWEu3h) Someone else on r/blender mentioned that it happens to them too (https://www.reddit.com/r/blenderhelp/comments/jeb9hw/blender_crashes_when_using_gas_fluid_domain_in/g9enbo6). They apparently have tested it on both 2.83.7 and the latest 2.91.0 alpha on Linux. --- Before the crash the debug log reports warnings and errors: ``` Texture state usage warning: The texture object (0) bound to texture image unit 0 does not have a defined base level and cannot be used for texture mapping. ``` ``` Error: Program undefined behavior warning: The current GL state uses a sampler (0) that has depth comparisons disabled, with a texture object (0) with a non-depth format, by a shader that samples it with a shadow sampler. Using this state to sample would result in undefined behavior. ``` ``` Stack trace: blender.exe :0x00007FF6ACF8A540 ccl::BVH::pack_primitives blender.exe :0x00007FF6ACF89C50 ccl::BVH::refit blender.exe :0x00007FF6A9ED92C0 ccl::Geometry::compute_bvh blender.exe :0x00007FF6A9EE2980 std::_Func_impl_no_alloc<std::_Binder<std::_Unforced,void (__cdecl ccl::Geometry::*)(ccl::Device * blender.exe :0x00007FF6ABF7FE70 tbb::internal::function_task<std::function<void __cdecl(void)> >::execute tbb.dll :0x00007FFD911637A0 tbb::recursive_mutex::scoped_lock::internal_try_acquire tbb.dll :0x00007FFD911637A0 tbb::recursive_mutex::scoped_lock::internal_try_acquire blender.exe :0x00007FF6A8E91BA0 tbb::internal::task_group_base::wait blender.exe :0x00007FF6ABF7F070 ccl::TaskPool::wait_work blender.exe :0x00007FF6A9EDA570 ccl::GeometryManager::device_update blender.exe :0x00007FF6A9E58450 ccl::Scene::device_update blender.exe :0x00007FF6A9E5A100 ccl::Scene::update blender.exe :0x00007FF6A9E71170 ccl::Session::update_scene blender.exe :0x00007FF6A9E729E0 ccl::Session::run_cpu blender.exe :0x00007FF6A9E71340 ccl::Session::run blender.exe :0x00007FF6ABF82760 ccl::thread::run blender.exe :0x00007FF6A969D710 std::thread::_Invoke<std::tuple<void * __ptr64 (__cdecl*)(void * __ptr64),ccl::thread * __ptr64>,0, ucrtbase.dll :0x00007FFDCB261430 configthreadlocale KERNEL32.DLL :0x00007FFDCD6C6FC0 BaseThreadInitThunk ntdll.dll :0x00007FFDCD99CEA0 RtlUserThreadStart ``` --- **Exact steps for others to reproduce the error** 1. Switch to the Rendered view 2. Switch from Eevee to Cycles 3. Click on the default cube 4. Go to the Physics Properties tab 5. Click on Fluid 6. Change Type to Domain [blender.crash.txt](https://archive.blender.org/developer/F9024829/blender.crash.txt)

Added subscriber: @glibg10b

Added subscriber: @glibg10b

#81718 was marked as duplicate of this issue

#81718 was marked as duplicate of this issue

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Unfortunately, there is no stack trace in your blender.crash.txt, likely because you're using the Steam version that is missing the debug symbols. ~~I also can't reproduce the crash on my system with the lastest master. ~~ I can reproduce it, the steps to reproduce the bug had Cycles and Eevee switched.

Could you please download the daily build of Blender 2.91 , extract it and double click on the blender_debug_gpu.cmd. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files (debug log and system information). Add the debug log to your bug report by clicking on the upload button as shown in the screenshot below. Please also upload the crash log located in C:\Users\[your username]\AppData\Local\Temp\blender.crash.txt which should then contain the stack trace. You can type %TEMP% into the path bar of the Windows Explorer to open the directory.

2019_12_04_upload_icon_developer_blender_org.png

Unfortunately, there is no stack trace in your `blender.crash.txt`, likely because you're using the Steam version that is missing the debug symbols. ~~I also can't reproduce the crash on my system with the lastest master. ~~ I can reproduce it, the steps to reproduce the bug had Cycles and Eevee switched. Could you please download the daily build of [Blender 2.91 ](https://builder.blender.org/download/), extract it and double click on the `blender_debug_gpu.cmd`. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files (debug log and system information). Add the debug log to your bug report by clicking on the upload button as shown in the screenshot below. Please also upload the crash log located in `C:\Users\[your username]\AppData\Local\Temp\blender.crash.txt` which should then contain the stack trace. You can type `%TEMP%` into the path bar of the Windows Explorer to open the directory. ![2019_12_04_upload_icon_developer_blender_org.png](https://archive.blender.org/developer/F8190038/2019_12_04_upload_icon_developer_blender_org.png)

Yes, I was using the Steam version.

blender_debug_output.txt

blender.crash.txt

Yes, I was using the Steam version. [blender_debug_output.txt](https://archive.blender.org/developer/F9024824/blender_debug_output.txt) [blender.crash.txt](https://archive.blender.org/developer/F9024829/blender.crash.txt)

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @sebbas

Added subscriber: @sebbas

Confirmed and really high priority

Confirmed and really high priority

Confirmed on 2.83.0 too

Confirmed on 2.83.0 too

Added subscriber: @Beryesa

Added subscriber: @Beryesa
Manuel Castilla self-assigned this 2020-10-25 02:53:11 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Can confirm D9340 fixes the crash. This one is for @brecht to decide though.

Can confirm [D9340](https://archive.blender.org/developer/D9340) fixes the crash. This one is for @brecht to decide though.

This issue was referenced by ae5fd92228

This issue was referenced by ae5fd92228f82270806b127facba1f6c052f9717

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @SteffenD, @manzanilla, @mano-wii

Added subscribers: @SteffenD, @manzanilla, @mano-wii

Removed subscribers: @manzanilla, @SteffenD

Removed subscribers: @manzanilla, @SteffenD
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81893
No description provided.