Fix T81893: Cycles viewport crash changing mesh to smoke domain

Now that volume is a dedicated geometry type in Cycles, we need to re-allocate
the geometry when a mesh changes into a volume.