intern/cycles/blender/blender_id_map.h
@@ -19,6 +19,7 @@
 
 #include <string.h>
 
+#include "render/geometry.h"
 #include "render/scene.h"
 
 #include "util/util_map.h"
@@ -230,9 +231,9 @@ struct ObjectKey {
 
 struct GeometryKey {
   void *id;
-  bool use_particle_hair;
+  Geometry::Type geometry_type;
 
-  GeometryKey(void *id, bool use_particle_hair) : id(id), use_particle_hair(use_particle_hair)
+  GeometryKey(void *id, Geometry::Type geometry_type) : id(id), geometry_type(geometry_type)
   {
   }
 
@@ -242,7 +243,7 @@ struct GeometryKey {
       return true;
     }
     else if (id == k.id) {
-      if (use_particle_hair < k.use_particle_hair) {
+      if (geometry_type < k.geometry_type) {
         return true;
       }
     }
